# flight-simulator

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Makefile  Makefile.old  compile_commands.json  err.txt  imgui.ini  premake5.lua
.github/workflows/: codeql-analysis.yml
assets/shaders/: default.fs  default.vs
libs/GLAD/src/: glad.c
src/: main.cpp
src/core/fonts/: fonts.c  fonts.cpp
src/core/gameObject/: gameObject.cpp  gameObject.hpp
src/core/graphics/: graphics.cpp  graphics.hpp
src/core/graphics/imageData/: imageData.cpp  imagedata.hpp
src/core/graphics/sprite/: sprite.cpp  sprite.hpp
src/core/graphics/sprite/animation/: animation.hpp
src/core/input/: input.hpp  keyboard.cpp  keyboard.hpp  mouse.cpp  mouse.hpp
src/core/math/: mathUtils.cpp  mathUtils.hpp
src/core/math/vector/: vector3.hpp
src/core/shader/: shader.cpp  shader.hpp
src/program/: program.cpp  program.hpp
src/program/bouncingPoint/: bouncingPoint.cpp  bouncingPoint.hpp
src/program/camera/: camera.cpp  camera.hpp
src/program/math/: mathUtils.cpp  mathUtils.hpp
src/program/object3D/: object3d.cpp  object3d.hpp
src/program/shape/: shape.cpp  shape.hpp
